fix: word-wrap , dark mode offset

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -9,7 +9,7 @@
     --accents6: #999;
     --accents7: #eaeaea;
     --accents8: #fafafa;
-    --background: #000;
+    --background: #111;
     --foreground: #fff;
     --selection: #3291ff;
     --secondary: #888;
@@ -113,6 +113,7 @@ body {
     min-height: 100%;
     position: relative;
     overflow-x: hidden;
+    word-wrap: break-word;
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
